<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="310dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/photo_view"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_gravity="center"
            android:layout_marginTop="30dip"
            android:background="#ffffff"
            android:contentDescription="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/sex_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_weight="4"
                android:background="@android:drawable/btn_default_small" />
        </LinearLayout>

        <Button
            android:id="@+id/age_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@android:drawable/btn_default_small"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginTop="15dip"
            android:background="#aaaaaa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/get_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@android:drawable/btn_default_small"
                android:text="@string/this_phone" />
        </LinearLayout>

        <EditText
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/h_addr"
            android:inputType="textPostalAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginTop="15dip"
            android:background="#aaaaaa" />

        <Button
            android:id="@+id/start_end_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@android:drawable/btn_default_small"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginTop="15dip"
            android:background="#aaaaaa" />

        <EditText
            android:id="@+id/job1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/job"
            android:inputType="text" />

        <EditText
            android:id="@+id/salary1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/holiday"
            android:inputType="text" />

        <EditText
            android:id="@+id/holiday1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/salary"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginTop="15dip"
            android:background="#aaaaaa" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/add_remark" />

        <EditText
            android:id="@+id/remark_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginTop="15dip" />
    </LinearLayout>

</ScrollView>