<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="70dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:text="@string/usr" />

        <EditText
            android:id="@+id/usrname"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip"
        android:gravity="right|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginRight="10dip"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:text="@string/sub" />
        
    </LinearLayout>

</LinearLayout>