<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="310dip"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/skill_front"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dip"
            android:layout_weight="1"
            android:background="#333333"
            android:gravity="left"
            android:textColor="#aaaaaa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/skill_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip"
            android:layout_weight="1"
            android:background="#333333"
            android:gravity="right"
            android:textColor="#aaaaaa"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="15dip"
        android:background="#aaaaaa" />

    <EditText
        android:id="@+id/skill_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/skill_name"
        android:inputType="text"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="15dip"
        android:background="#aaaaaa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginRight="70dip"
            android:layout_marginLeft="10dip"
            android:text="@string/time_scores"
            android:textSize="20sp" />

        <Button
            android:id="@+id/time_score_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dip"
            android:background="@android:drawable/ic_input_add"
            android:textColor="#ffff00" />
    </LinearLayout>

    <EditText
        android:id="@+id/time_score_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/h_time_score"
        android:inputType="text"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="15dip"
        android:background="#aaaaaa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="center"
        android:layout_marginTop="20dip">

        <Button
            android:id="@+id/skill_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dip"
            android:background="@android:drawable/ic_input_add" />

        <Button
            android:id="@+id/skill_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dip"
            android:background="@android:drawable/ic_delete" />
    </LinearLayout>

</LinearLayout>